--- a/IgnoranceTransport/IgnoranceTransport.csproj
+++ b/IgnoranceTransport/IgnoranceTransport.csproj
@@ -141,6 +141,9 @@
     <None Include="Dependencies\UnityAsync\Manager\AsyncManager.ContinuationProcessorGroup.cs.meta" />
     <None Include="Dependencies\UnityAsync\Manager\AsyncManager.cs.meta" />
     <None Include="Dependencies\UnityAsync\TaskYieldInstruction.cs.meta" />
+    <None Include="Redist\Android\arm64-v8a\libenet.so" />
+    <None Include="Redist\Android\armeabi-v7a\libenet.so" />
+    <None Include="Redist\Failsafe.zip" />
     <None Include="Redist\macOS\enet.bundle">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
