Include an example network manager for newcomers or people who want to hit the ground running.

--- a/IgnoranceTransport/IgnoranceTransport.csproj
+++ b/IgnoranceTransport/IgnoranceTransport.csproj
@@ -48,6 +48,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IgnoranceNetworkManager.cs" />
     <Compile Include="Dependencies\ENet.cs" />
     <Compile Include="Dependencies\Mirror-2018\Runtime\ClientScene.cs" />
     <Compile Include="Dependencies\Mirror-2018\Runtime\CustomAttributes.cs" />
