update: gitignore and project version number

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ Assets/IgnoranceNext/
 Assets/Mirror/Authenticators/
 Assets/_DoNotShip/
 Assets/_DoNotShip.meta
+Assets/ScriptTemplates/
+Assets/ScriptTemplates.meta
