--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,6 @@ Assets/_DoNotShip/
 Assets/_DoNotShip.meta
 Assets/ScriptTemplates/
 Assets/ScriptTemplates.meta
+Assets/Mirror/Icon/
+LinuxBuild/
+Assets/Mirror/CompilerSymbols/
