Ignorance 1.4 client is functional. Server portion is work in progress.

--- a/.gitignore
+++ b/.gitignore
@@ -347,6 +347,8 @@ ASALocalRun/
 
 ![Aa]ssets/Mirror/Runtime/Transport/Ignorance
 ![Aa]ssets/Mirror/Runtime/Transport/Ignorance.meta
+![Aa]ssets/Mirror/Runtime/Transport/Ignorance4
+![Aa]ssets/Mirror/Runtime/Transport/Ignorance4.meta
 [Ll]ibrary/*
 ![Ll]ibrary/.gitkeep
 
