--- a/.gitignore
+++ b/.gitignore
@@ -331,22 +331,24 @@ ASALocalRun/
 .mfractor/
 
 # Dependencies so that people don't get import issues.
-[Aa]ssets/Mirror/Components
-[Aa]ssets/Mirror/Editor
-[Aa]ssets/Mirror/Examples
-[Aa]ssets/Mirror/Plugins
-[Aa]ssets/Mirror/Tests
-[Aa]ssets/Mirror/*.txt
-[Aa]ssets/Mirror/*.meta
-[Aa]ssets/Mirror/Runtime/*.cs
-[Aa]ssets/Mirror/Runtime/*.meta
-[Aa]ssets/Mirror/Runtime/*.asmdef
-
-[Aa]ssets/Mirror/Runtime/Transport/*
+[Aa]ssets/Mirror/
+![Aa]ssets/Mirror/Runtime/Transport/Ignorance
 ![Aa]ssets/Mirror/Runtime/Transport/ISegmentTransport.*
 
-![Aa]ssets/Mirror/Runtime/Transport/Ignorance
-![Aa]ssets/Mirror/Runtime/Transport/Ignorance.meta
+#[Aa]ssets/Mirror/Editor
+#[Aa]ssets/Mirror/Examples
+#[Aa]ssets/Mirror/Plugins
+#[Aa]ssets/Mirror/Tests
+#[Aa]ssets/Mirror/*.txt
+#[Aa]ssets/Mirror/*.meta
+#[Aa]ssets/Mirror/Runtime/*.cs
+#[Aa]ssets/Mirror/Runtime/*.meta
+#[Aa]ssets/Mirror/Runtime/*.asmdef
+# 
+
+# ![Aa]ssets/Mirror/Runtime/Transport/Ignorance
+# ![Aa]ssets/Mirror/Runtime/Transport/Ignorance.meta
+
 [Ll]ibrary/*
 ![Ll]ibrary/.gitkeep
 
@@ -366,3 +368,4 @@ Assets/ScriptTemplates.meta
 Assets/Mirror/Icon/
 LinuxBuild/
 Assets/Mirror/CompilerSymbols/
+Assets/NotFucked
