--- a/.gitignore
+++ b/.gitignore
@@ -380,3 +380,4 @@ Assets/Mirror/Runtime/Empty/*
 Builds
 Assets/Mirror/Runtime/Batching
 Assets/Mirror/Runtime/SnapshotInterpolation
+Assets/Mirror/Tests
