--- a/.gitignore
+++ b/.gitignore
@@ -387,3 +387,4 @@ Assets/Mirror/Transports/*
 Assets/Mirror/Runtime/Batching
 Assets/Mirror/Runtime/SnapshotInterpolation
 Assets/Mirror/Test
+UserSettings
